Cambio config DB a JawsDB para Heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost/db_springboot_backend?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=
+#MySQL local
+#spring.datasource.url=jdbc:mysql://localhost/db_springboot_backend?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=
+
+#MySQL JawsDB en Heroku
+spring.datasource.url=jdbc:mysql://w3epjhex7h2ccjxx.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/wdy8fd8xffx4lmdp?useSSL=false
+spring.datasource.username=caora3w3k8wkloao
+spring.datasource.password=zw7lvzxq4b9wmupi
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -10,3 +17,5 @@ spring.jackson.locale=es_AR
 
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+server.port=${PORT:8080}
