--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,6 @@
-#MySQL local
-#spring.datasource.url=jdbc:mysql://localhost/db_springboot_backend?useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=
-
-#MySQL JawsDB en Heroku
-spring.datasource.url=jdbc:mysql://w3epjhex7h2ccjxx.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/wdy8fd8xffx4lmdp?useSSL=false
-spring.datasource.username=caora3w3k8wkloao
-spring.datasource.password=zw7lvzxq4b9wmupi
+spring.datasource.url=${JDBC_DATABASE_URL}?useSSL=false
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
